5.5.0
-----
1. If using Lyrion theme and colour from cover, then default to green
   highlight.

5.4.2
-----
1. Tweak how navigation drawer list is scrolled to ensure current player is
   visible.
2. Work-around drag highlight sometimes reamining after drop.
3. Update volume slider collapsing code to handle window controls overlay.
4. Add Wiim player icon.

5.4.1
-----
 1. Translation update.
 2. Fix MAI settings button (top right cog icon).
 3. Add long-press on player icon in navigation drawer to open sync dialog.
 4. Fix move into favourites folder prompt.
 5. Fix emblem position in lists.
 6. Allow dropping favourites into folders even with sort enabled.
 7. Work-around long-press on power button falling through to auto-select a
    sleep item.
 8. Work-around potential long-press on player icon button falling through to
    auto-select sync players.
 9. Improve performance of queue slide-in animation.
10. Change browse waiting to load list icon.
11. Change toolbar update icon when LMS is scanning files.
12. UTF-8 decode random mix filenames.
13. Ignore horizontal swipes 48px from either side.
14. Increase hit-area of menu+title.
15. When opening navigation drawer try to ensure current player is visible.

5.4.0
-----
 1. Combine main menu and players menu into left hand navigation drawer.
 2. Remove most dialog toolbar menus and replace with buttons.
 3. Remove option to replace player icon with power button, as no longer
    applicable.
 4. Show track subtitles, if enabled in interface settings.
 5. Show full server-side interface settings page, but add a note that not all
    settings affect Material Skin.
 6. Add custom favourite folder icon.
 7. Try to extract dominant, and not average, colour from image when using
    colour from cover.
 8. Invalidate artist list cache if user-defined role exclusion changed,
    unified artist setting changed, or band/composer/conductor in artist list
    changed (some changes require page to be reloaded).