@@ -441,6 +441,16 @@ html, .mini-player {
  height:var(--bottom-pad)!important;
 }
 
+.nd-shortuts {
+ display:grid;
+ margin-left:16px;
+ grid-template-columns: 54px 54px 54px 54px 54px;
+}
+
+.nd-shortuts-wide {
+ grid-template-columns: 54px 54px 54px 54px 54px 54px 54px;
+}
+
 .v-list__tile__avatar {
  min-width:54px;
 }
@@ -4033,7 +4043,7 @@ div.v-subheader {
  border:2px solid var(--text-color);
  border-radius: 15px;
  position:fixed;
- right:calc(50% - 60px);
+ right:calc(50% - 58px);
  top:calc(var(--top-pad) + 9px);
 }
 
