@@ -2,6 +2,7 @@
 -----
 1. If using Lyrion theme and colour from cover, then default to green
    highlight.
+2. Add option to show home-screen shortcuts in navigation drawer.
 
 5.4.2
 -----
